--- a/src/app/components/system-details/system-details.component.scss
+++ b/src/app/components/system-details/system-details.component.scss
@@ -8,7 +8,7 @@
   .ms-robot-details {
     margin-bottom: 1em;
 
-    .state-indicator {
+    .ms-state-indicator {
       width: 1em;
     }
 
@@ -24,7 +24,7 @@
   .ms-robot-details {
     margin-bottom: 0.5em;
 
-    .state-indicator {
+    .ms-state-indicator {
       width: 0.5em;
     }
 
